--- a/Version1.html
+++ b/Version1.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script src="https://use.fontawesome.com/c33f5f4b55.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="version.css">
-    <link rel="stylesheet" href="unslider.css">
+    <link rel="stylesheet" href="css/version.css">
+    <link rel="stylesheet" href="css/unslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function (){
